@@ -578,3 +578,7 @@ table.g-albums-table .g-albumdesc-cell {
 	border: 1px solid #ccc;
 	-moz-border-radius: 5px;
 }
+
+.hidden {
+	display: none;
+}
