@@ -1,3 +1,15 @@
+2007-06-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b68
+
+ * NEW: Its now possible to resize the orginal version.
+
+   Changes in:
+	- popups/resize_photo.php
+        - classes/Album.php
+        - classes/AlbumItem.php
+        - classes/Image.php
+   
+   At a first glance its VERY slow. If someone wanna tune it ..
+
 2007-06-06 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b67
 
  * Change: Remove unneeded param $pathToResized from
